Verificação de email com jwt

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,14 @@ PORT=3000
 
 APP_URL=
 
-APP_SECRET_KEY=
-APP_SECRET_KEY_EXPIRES_IN=
-
 DB_HOST=
 DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
 DB_DATABASE=
+
+JWT_SECRET=
+JWT_EXPIRES_IN=1d
 
 GOOGLE_MAIL=
 GOOGLE_APP_PASSWORD=
