--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
+    "hbs": "^4.2.0",
     "mysql2": "^3.16.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
